--- a/FinalProduct.html
+++ b/FinalProduct.html
@@ -30,14 +30,14 @@
 <main>
 <!-- PAGE EXPLANATION -->
 <div class="intro">
-	<h1 class="headerText"> Final Product : Reclaiming Geospatial Data and Decolonizing GIS Design</h1>
+	<h1 class="headerText"> Lake Scugog </h1>
 	<p class="headerText2"></p>
 </div>
 
 
 <p style="text-align:center">
 
-<iframe scrolling="no" frameborder="0"src="https://experience.arcgis.com/experience/6f418dd480994248bfeab45047d96ace" style="width:1080px; height:780px;"></iframe>
+<iframe scrolling="no" frameborder="0"src="https://fleming.maps.arcgis.com/apps/instant/imageryviewer/index.html?appid=c1b0e5c06f3c4d4aa9e330af7e19f885" style="width:1080px; height:780px;"></iframe>
 </p>
 
 </main>
