--- a/Page2.html
+++ b/Page2.html
@@ -30,17 +30,17 @@
 <main>
 <!-- PAGE EXPLANATION -->
 <div class="intro">
-	<h1 class="headerText"> Mapping Indigenous data across Canada </h1>
-	<p class="headerText2"> A web solution using Ersi Configurable apps to map Indigenous data that is severely underrepresented</p>
+	<h1 class="headerText"> Methodology for creating  </h1>
+	<p class="headerText2"> A web solution using Ersi Configurable apps to map Lake Scugogs shoreline for the last 65+ years</p>
 </div>
 
 
 <!-- GENERAL -->
 
 <div class="block1">
-    <h1 class = "title4"> Our plan </h1>
-	<p class = homeSubHead> how we did it </p>
-	<p class="generalText"> What we did </p>
+    <h1 class = "title4"> Waterfall planning  </h1>
+	<p class = generalText> The methodology that offers the shoreline development analysis the most successful outcome is based on the waterfall methodology integrated with some parts of the agile based methodology. With this methodology, our group would be able to efficiently complete one task at a time and move onto the next task as there is little to no testing involved between different tasks. However, consultation with our client will be required during some stages and therefore there would be a slight agile methodology as our group would revisit tasks to confirm they have been executed to expectations.  </p>
+
 
 </div>
 
