--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="text-container">
-                    <h1 class="h1-large">Mapping Indigenous Languages across Ontario</h1>
-                    <p class="p-large"> Problem Statement </p>
+                    <h1 class="h1-large">Mapping the 65+ years of Lake Scugogs changing shoreline </h1>
+                    <p class="p-large"> In association with Kawartha Conservation </p>
                 </div> <!-- end of text-container -->
             </div> <!-- end of col -->
         </div> <!-- end of row -->
@@ -51,24 +51,21 @@
 <!-- GENERAL -->
 
 <div class="block1">
-	<p class = homeSubHead> Ideal </p>
-	<p class="generalText"> A web app that maps indigenous languages and popluations across Ontario and provides general information about a subject that is under represented  </p>
-	<p class = homeSubHead> Reality </p>
-	<p class="generalText"> The data that is currently available is not properly represented visually when looking at Indigenous Languages spoken in Ontario. </p>
-	<p class = homeSubHead> Consequences </p>
-	<p class="generalText"> Without mapping of Indigenous Languages, there will continue to be a misrepresentation of Indigenous people in Ontario. </p>
-	<p class = homeSubHead> Proposal </p>
-	<p class="generalText"> We will use Esri Experience Builder to build an app that displays Indigenous Languages arcoss Ontario, data will be taken from Statisitics Canada to create the map and additional graphs/ information. </p>
-    <p class = homeSubHead> Technology Used </p>
-    <p class="generalText">  ArcGIS Pro, Esri Experience Builder, ArcGIS Online Dashboards </p>
+	<p class = homeSubHead> Background to the Project  </p>
+	<p class="generalText"> The overall health of a lake or large body of water is heavily reliant on the health of its shorelines. Healthy shorelines can keep pollutants and erosion out of the water. Furthermore, shorelines are one of the most productive places on the planet in terms of ecology because they are responsible for the maintenance of so many relationships. The shoreline of a body of water is where nearly 90% of the organisms that live in the body of water are born and raised. (“The Importance of Healthy Shorelines,” n.d.)  <br></br> Despite the fact that this "ribbon of life" known as the shoreline supports the majority of a waterbody's ecological roles, the land near the water is also a very appealing place for development. Summer homes and cottages are becoming increasingly popular in North America as people look for ways to get away from large cities and densely populated areas and experience nature on the edge of a lake or river.  <br></br> Due to the impact of this development concept on the shorelines of lakes and other bodies of water, Kawartha Conservation has decided to provide information on the development of a specific large waterbody in the Kawarthas over the past 65 years. The team intends to create a visual representation of how the shoreline has developed over time by analysing aerial/satellite imagery of the area around Lake Scugog in Ontario. This data and representation of land use changes is critical for managing and sustaining large bodies of water in the future.   </p>
+	<p class = homeSubHead> Area of Study  </p>
+	<p class="generalText"> There are many bodies of water around the world where the shorelines are changing rapidly due to development. Nonetheless, the client (Kawartha Conservation) is located in Ontario's Kawartha Lakes region and has selected Lake Scugog (near the town of Port Perry) as their study area. The shorelines of this body of water are the primary focus for visualising land use changes over time.    </p>
+	<p class = homeSubHead> The Problem </p>
+	<p class="generalText"> Natural threats and hazards are introduced with the development of land near shorelines. In order to manage and maintain lakes and their ecosystems along their shorelines, it is vital to investigate previous developments and land use changes that have impacted these areas. Furthermore, a visual representation of these land use changes is required in order to perform an analysis on these areas. As a result, using aerial/satellite imagery of the shoreline over time and being able to classify land development and produce this information in a visual format is crucial for Kawartha Conservation in determining how to manage our lakes in a sustainable manner.  </p>
+
 </div>
 
 
 
 <!-- LINKS TO PROJECTS -->
 <div class = "block3">
-    <p class = homeSubHead>  Take me to the final product I dont want to read all this! </p>
-<a class="link" href = "FinalProduct.html"> If thats want you want, Click here  </a>
+    <p class = homeSubHead>  If you would like anymore information about Lake Scugog or Kawartha Conservation please visit the link below  </p>
+<a class="link" href = "https://www.kawarthaconservation.com/en/index.aspx"> Take me to Kawartha Conservation </a>
 </div>
 
 </main>
